# AI-toolbox-waterkeringen

./: .nojekyll  CNAME  README.md  about.html  contact.html  data.html  digigids.html  index.html  more.html  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-docs.yml
assets/: frontpage.css  glide.js  styles.css
docs/: _quarto.yml  about.qmd  contact.qmd  data.py  data.qmd  digigids.py  digigids.qmd  index.qmd  more.qmd
docs/assets/: glide.core.css.map  glide.js  glide.theme.css.map  styles.css
docs/examples/: opschotdetectie_voorbeeld.ipynb
examples/: automatic_mask_generator_example.html  image_predictor_example.html  opschotdetectie_voorbeeld.html  scheurdetectie_voorbeeld.html
scripts/opschot-detectie/: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pixi.toml  pyproject.toml  test_grounding_02a_subset.ipynb  test_grounding_02a_subset_havenhoofden.ipynb  test_grounding_02b_hit.ipynb  utils.py
scripts/opschot-detectie/.devcontainer/: Dockerfile  devcontainer.json
scripts/opschot-detectie/config/: config.yaml
scripts/opschot-detectie/postprocessing/: hit_percentage.ipynb  las_segmentatie.ipynb
scripts/opschot-detectie/preprocessing/: create_tiles_havenhoofden.py  utils.py
scripts/opschot-detectie/src/: pyproject.toml
scripts/opschot-detectie/src/opschot-detectie/: logging.conf  main.py  opschotdetectie_voorbeeld.ipynb  test_grounding_02a_subset.ipynb  test_grounding_02a_subset_havenhoofden.ipynb  test_grounding_02b_hit.ipynb  utils.py
scripts/opschot-detectie/src/opschot-detectie/config/: config.yaml
scripts/opschot-detectie/src/opschot-detectie/data/: model_weights.md
scripts/opschot-detectie/src/opschot-detectie/postprocessing/: README.md  get_labeled_images.ipynb  hit_percentage.ipynb  las_segmentatie.ipynb  lidar-postprocessing.ipynb
scripts/opschot-detectie/src/opschot-detectie/preprocessing/: README.md  create_tiles.py  create_tiles_havenhoofden.py  logging.conf  utils.py
scripts/scheur-detectie/: 0b_preprocess_labels.ipynb  config.yml
site_libs/bootstrap/: bootstrap-aa9ec773a6a9db693bdd4f6a573a0014.min.css  bootstrap-d5aa4a874f08e9f807ae0b09a7753b06.min.css  bootstrap-d979d814f7a9800a3497ce52d9f58ddb.min.css  bootstrap-dark-0723cb85dee730add002038e1cf32904.min.css  bootstrap-dark-0865ab0a65a7ab324909e59e8e13c0d5.min.css  bootstrap-dark-3075ac56402b556d43e30a623c2ba4f2.min.css  bootstrap-dark.min.css  (+6 more)
(+19 files in other folders)
