[project]
name = "opschot-detectie"
description = "Opschot-detectie van houtachtige begroeiing op de steenbekleding van een waterkering"
version = "1.0.0"
readme = "README.md"
authors = [
    { name = "Joost Stenfert", email = "stenfert@hkv.nl" },
    { name = "Thomas Stolp", email = "stolp@hkv.nl" },
    { name = "Guy Dupuits", email = "dupuits@hkv.nl" },
]
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
# Dependencies are managed by pixi.toml
dependencies = []

[project.optional-dependencies]
# All dependencies are managed through pixi.toml
# This allows the package to be installable while letting pixi handle the environment
